<resources>
    <string name="app_name">CookSmart</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="birthdate">Birthdate</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="api_key">0104170f6f96410395f135a926c41849</string>
    <string name="title_activity_view_recipe">ViewRecipeActivity</string>
    <string name="camera_button">camera_button</string>
    <string name="enter_ingredient">Enter ingredient</string>
    <string name="directions">Directions</string>
    <string name="recipe_thumbnail">Recipe thumbnail</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="favorites">Favorites</string>

    <!-- Recipe 1 -->
    <string-array name="recipe_1_steps">
        <item>Preheat the oven to 200 degrees F.</item>
        <item>Whisk together the flour, pecans, granulated sugar, light brown sugar, baking powder, baking soda, and salt in a medium bowl.</item>
        <item>Whisk together the eggs, buttermilk, butter and vanilla extract and vanilla bean in a small bowl.</item>
        <item>Add the egg mixture to the dry mixture and gently mix to combine. Do not overmix.</item>
        <item>Let the batter sit at room temperature for at least 15 minutes and up to 30 minutes before using.</item>
        <item>Heat a cast iron or nonstick griddle pan over medium heat and brush with melted butter. Once the butter begins to sizzle, use 2 tablespoons of the batter for each pancake and cook until the bubbles appear on the surface and the bottom is golden brown, about 2 minutes, flip over and cook until the bottom is golden brown, 1 to 2 minutes longer.</item>
        <item>Transfer the pancakes to a platter and keep warm in a 200 degree F oven.</item>
        <item>Serve 6 pancakes per person, top each with some of the bourbon butter.</item>
        <item>Drizzle with warm maple syrup and dust with confectioners sugar </item>
        <item>Garnish with fresh mint sprigs and more toasted pecans, if desired.</item>
    </string-array>

    <!-- Recipe 2 -->
    <string-array name="recipe_2_steps">
        <item>Combine the bourbon and sugar in a small saucepan and cook over high heat until reduced to 3 tablespoons, remove and let cool.</item>
        <item>Put the butter, molasses, salt and cooled bourbon mixture in a food processor and process until smooth.</item>
        <item>Scrape into a bowl, cover with plastic wrap and refrigerate for at least 1 hour to allow the flavors to meld.</item>
        <item>Remove from the refrigerator about 30 minutes before using to soften.</item>
    </string-array>

    <string-array name="cuisine_types">
        <item>Choose a cuisine</item>
        <item>African</item>
        <item>Asian</item>
        <item>American</item>
        <item>British</item>
        <item>Cajun</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Eastern European</item>
        <item>European</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Jewish</item>
        <item>Korean</item>
        <item>Latin American</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Middle Eastern</item>
        <item>Nordic</item>
        <item>Southern</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Vietnamese</item>
    </string-array>
</resources>
